<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">心事贴</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="logon">登陆</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="publish">发布</string>
    <string name="confirm_password">确认密码</string>
    <string name="duplicate_user_name">邮箱已注册</string>
    <string name="wrong_password">密码错误</string>
    <string name="unmatched_password">密码不匹配</string>
    <string name="reset">重置</string>
    <string name="wrong_email_addr">邮箱地址不合法</string>
    <string name="enter_new_email">请输入合法邮箱地址</string>
    <string name="error">错误</string>
    <string name="login_failed">登陆失败</string>
    <string name="title_activity_view_notes">ViewNotesActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="empty_username_password">用户名或密码为空</string>
    <string name="message">消息</string>
    <string name="register_succeeded">注册成功</string>
    <string name="register_failed">注册失败</string>
    <string name="email_not_valid">用户名不合法</string>
    <string name="hint_user_name">someone@example.com</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_confirm_password">请再次输入密码</string>
    <string name="refresh">刷新</string>
    <string name="image">图片</string>
    <string name="title_activity_write">WriteActivity</string>
    <string name="write_note">写消息</string>
    <string name="cancel">取消</string>
    <string name="logout">退出</string>

</resources>