<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WriteActivity" >

    <TextView
        android:id="@+id/textViewWriteNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/write_note"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTextWriteNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewWriteNote"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/buttonCancelPublish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonPublishNote"
        android:layout_alignRight="@+id/editTextWriteNote"
        android:layout_toRightOf="@+id/textViewWriteNote"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/buttonPublishNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextWriteNote"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:layout_toLeftOf="@+id/textViewWriteNote"
        android:text="@string/publish" />

</RelativeLayout>
