<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textViewLogon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/logon"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewLogon"
        android:layout_marginTop="53dp"
        android:text="@string/user_name" />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewUserName"
        android:layout_alignBottom="@+id/textViewUserName"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewUserName"
        android:layout_below="@+id/editTextUserName"
        android:layout_marginTop="34dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewPassword"
        android:layout_alignBottom="@+id/textViewPassword"
        android:layout_alignLeft="@+id/editTextUserName"
        android:layout_alignRight="@+id/editTextUserName"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonLogon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPassword"
        android:layout_below="@+id/editTextPassword"
        android:layout_marginTop="45dp"
        android:text="@string/logon" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonLogon"
        android:layout_alignBottom="@+id/buttonLogon"
        android:layout_alignRight="@+id/editTextPassword"
        android:text="@string/register" />

</RelativeLayout>
